mi segundo commit

--- a/TIC2024.T1.md
+++ b/TIC2024.T1.md
@@ -3,6 +3,7 @@
 # TIC
 ## Nombre: Carlos Sánchez
 ## Paralelo: A
+## Fecha: 23/05/2024
 # I Love You Ciberataque
 
 Uno de los virus gusano más conocidos en la historia denominado “I Love You” apareció en internet el 4 de mayo del 2000 y su medio de propagación fue el uso del correo electrónico enviándose con el asunto “ILOVEYOU” 
