mi tercer commit

--- a/TIC2024.T1.md
+++ b/TIC2024.T1.md
@@ -1,10 +1,10 @@
 # Universidad UTE
 # Desarrollo de Software
 # TIC
-## Nombre: Carlos Sánchez
+## Nombre: Carlos Alberto Sánchez
 ## Paralelo: A
 ## Fecha: 23/05/2024
-# I Love You Ciberataque
+# I Love You Ciberataque 
 
 Uno de los virus gusano más conocidos en la historia denominado “I Love You” apareció en internet el 4 de mayo del 2000 y su medio de propagación fue el uso del correo electrónico enviándose con el asunto “ILOVEYOU” 
 y un archivo adjunto con el nombre “LOVE-LETTER-FOR-YOU.TXT.vbs” (Carta de amor para ti), este virus infectó 50 millones de equipos en 10 días y produjo daños por más de 5 mil millones de dólares.
