--- a/A_T2_SANCHEZ_CARLOS_ipynb.ipynb
+++ b/A_T2_SANCHEZ_CARLOS_ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPL6IBHXbAPfuwIrw892afg",
+      "authorship_tag": "ABX9TyPnkrfyVh8N9AiL4LcXmV7f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 1\n",
+        "#Ejercicio 1: Escribe un programa que imprima \"Hola, Mundo!\" en la pantalla.\n",
         "print (\"Hola, Mundo!\")"
       ],
       "metadata": {
@@ -71,7 +71,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 2\n",
+        "#Ejercicio 2:  Escribe un programa que pida al usuario dos números y los sume.\n",
         "num1 = int(input(\"Ingrese un numero\"))\n",
         "num2 = int(input(\"Ingrese el segundo numero\"))\n",
         "\n",
@@ -102,7 +102,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 3\n",
+        "#Ejercicio 3: Escribe un programa que determine si un número introducido por el usuario es par o impar\n",
         "num1 = int(input(\"Ingrese un numero\"))\n",
         "\n",
         "if num1 % 2 == 0:\n",
@@ -132,7 +132,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 4\n",
+        "#Ejercicio 4: Escribe un programa que realice operaciones básicas (suma, resta, multiplicación y división) entre dos números introducidos por el usuario\n",
         "num1 = int(input(\"Ingrese un numero \"))\n",
         "num2 = int(input(\"Ingrese el segundo numero \"))\n",
         "\n",
@@ -188,8 +188,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 5\n",
-        "#Escribe un programa que pida tres números al usuario y determine cuál es el mayor.\n",
+        "#Ejercicio 5: Escribe un programa que pida tres números al usuario y determine cuál es el mayor.\n",
         "\n",
         "num1 = int(input(\"Introduce el primer número: \"))\n",
         "num2 = int(input(\"Introduce el segundo número: \"))\n",
@@ -229,7 +228,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 6\n",
+        "#Ejercicio 6: Escribe un programa que calcule el área de un círculo a partir de su radio, ingresado por el usuario.\n",
         "radio = int(input(\"Ingrese el valor del radio\"))\n",
         "\n",
         "area = 3.1416 * radio**2\n",
@@ -258,7 +257,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 7\n",
+        "#Ejercicio 7: Escribe un programa que convierta una temperatura dada en grados Celsius a grados Fahrenheit.\n",
         "celcius = int(input(\"Introduzca un valor de temperatura Celcius\"))\n",
         "\n",
         "fahrenheit = (celcius * 9/5) + 32\n",
@@ -287,7 +286,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 8\n",
+        "#Ejercicio 8: Escribe un programa que cuente hacia atrás desde 10 hasta 0.\n",
         "lista = [0,1,2,3,4,5,6,7,8,9,10]\n",
         "\n",
         "print(lista [::-1])"
@@ -313,7 +312,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ejercicio 9\n",
+        "#Ejercicio 9: Escribe un programa que muestre la tabla de multiplicar de un número introducido por el usuario.\n",
         "numero_ingresado_usuario = int(input(\"Ingrese un numero \"))\n",
         "print(\"la tabla del\", numero_ingresado_usuario)\n",
         "for i in range(1, 11):\n",
